fix some spacing issues

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -41,7 +41,7 @@ a {
   border-radius: 5px;
   color: white;
   position: relative;
-  top: 250px;
+  top: 230px;
 }
 
 #login-form h2 {
